--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -9,57 +9,85 @@
 </template>
 <template class='financialChartToolbar'>
 	<div class='financialChartToolbar'>
-		<div class='financialChartIndicatorPicker'></div>
-		<div class='financialChartOverlayPicker'></div>
-		<div class='financialChartTrendLineTypePicker'></div>
+		<div class='financialChartIndicatorMenu'></div>
 		<div class='financialChartRangeSelector'></div>
 		<div class='financialChartTypePicker'></div>
-		<div class='financialChartVolumeTypePicker'></div>
 	</div>
 </template>
-<template class='financialChartIndicatorPicker'>
-		<button class='financialChartIndicatorPickerDropDownButton'>Indicators</button>
-		<select class='financialChartIndicatorPickerDropDownList' multiple='true'>
-			<option value='AbsoluteVolumeOscillator'>AbsoluteVolumeOscillator</option>
-			<option value='AccumulationDistribution'>AccumulationDistribution</option>
-			<option value='AverageDirectionalIndex'>AverageDirectionalIndex</option>
-			<option value='AverageTrueRange'>AverageTrueRange</option>
-			<option value='BollingerBandWidth'>BollingerBandWidth</option>
-			<option value='ChaikinOscillator'>ChaikinOscillator</option>
-			<option value='ChaikinVolatility'>ChaikinVolatility</option>
-			<option value='CommodityChannelIndex'>CommodityChannelIndex</option>
-			<option value='DetrendedPriceOscillator'>DetrendedPriceOscillator</option>
-			<option value='ForceIndex'>ForceIndex</option>
-			<option value='FullStochasticOscillator'>FullStochasticOscillator</option>
-			<option value='MarketFacilitationIndex'>MarketFacilitationIndex</option>
-			<option value='MassIndex'>MassIndex</option>
-			<option value='MedianPrice'>MedianPrice</option>
-			<option value='MoneyFlowIndex'>MoneyFlowIndex</option>
-			<option value='MovingAverageConvergenceDivergence'>MovingAverageConvergenceDivergence</option>
-			<option value='NegativeVolumeIndex'>NegativeVolumeIndex</option>
-			<option value='OnBalanceVolume'>OnBalanceVolume</option>
-			<option value='PercentagePriceOscillator'>PercentagePriceOscillator</option>
-			<option value='PercentageVolumeOscillator'>PercentageVolumeOscillator</option>
-			<option value='PositiveVolumeIndex'>PositiveVolumeIndex</option>
-			<option value='PriceVolumeTrend'>PriceVolumeTrend</option>
-			<option value='RateOfChangeAndMomentum'>RateOfChangeAndMomentum</option>
-			<option value='RelativeStrengthIndex'>RelativeStrengthIndex</option>
-			<option value='SlowStochasticOscillator'>SlowStochasticOscillator</option>
-			<option value='StandardDeviation'>StandardDeviation</option>
-			<option value='StochRSI'>StochRSI</option>
-			<option value='TRIX'>TRIX</option>
-			<option value='TypicalPrice'>TypicalPrice</option>
-			<option value='UltimateOscillator'>UltimateOscillator</option>
-			<option value='WeightedClose'>WeightedClose</option>
-			<option value='WilliamsPercentR'>WilliamsPercentR</option>
-		</select>
-</template>
-<template class='financialChartOverlayPicker'>
-		<button class='financialChartOverlayPickerDropDownButton'>Overlay</button>
-		<select class='financialChartOverlayPickerDropDownList' multiple='true'>
-			<option value='BollingerBands'>BollingerBands</option>
-			<option value='PriceChannel'>PriceChannel</option>
-		</select>
+<template class='financialChartIndicatorMenu'>
+<button class='financialChartIndicatorMenuDropDownButton'>Indicator</button>
+<div class='financialChartIndicatorMenuDropDownMenu'>
+    <ul>
+        <li data-value='FinancialOverlayType'>Overlays
+            <ul>
+                <li data-value='BollingerBands'>BollingerBands</li>
+                <li data-value='PriceChannel'>PriceChannel</li>
+            </ul>
+        </li>
+        <li data-value='TrendLineType'>Trendlines
+            <ul>
+	<li data-value='LinearFit'>LinearFit</li>
+	<li data-value='QuadraticFit'>QuadraticFit</li>
+	<li data-value='CubicFit'>CubicFit</li>
+	<li data-value='QuarticFit'>QuarticFit</li>
+	<li data-value='QuinticFit'>QuinticFit</li>
+	<li data-value='LogarithmicFit'>LogarithmicFit</li>
+	<li data-value='ExponentialFit'>ExponentialFit</li>
+	<li data-value='PowerLawFit'>PowerLawFit</li>
+	<li data-value='SimpleAverage'>SimpleAverage</li>
+	<li data-value='ExponentialAverage'>ExponentialAverage</li>
+	<li data-value='ModifiedAverage'>ModifiedAverage</li>
+	<li data-value='CumulativeAverage'>CumulativeAverage</li>
+	<li data-value='WeightedAverage'>WeightedAverage</li>
+            </ul>
+        </li>
+        <li data-value='FinancialChartVolumeType'>Volume
+            <ul>
+	<li data-value='Column'>Column</li>
+	<li data-value='Line'>Line</li>
+	<li data-value='Area'>Area</li>
+            </ul>
+        </li>
+        <li data-value='FinancialIndicatorType'>Standalone Indicators
+            <ul>
+    <li data-value='AbsoluteVolumeOscillator'>AbsoluteVolumeOscillator</li>
+    <li data-value='AccumulationDistribution'>AccumulationDistribution</li>
+    <li data-value='AverageDirectionalIndex'>AverageDirectionalIndex</li>
+    <li data-value='AverageTrueRange'>AverageTrueRange</li>
+    <li data-value='BollingerBandWidth'>BollingerBandWidth</li>
+    <li data-value='ChaikinOscillator'>ChaikinOscillator</li>
+    <li data-value='ChaikinVolatility'>ChaikinVolatility</li>
+    <li data-value='CommodityChannelIndex'>CommodityChannelIndex</li>
+    <li data-value='DetrendedPriceOscillator'>DetrendedPriceOscillator</li>
+	<li data-value='EaseOfMovement'>EaseOfMovement</li>
+	<li data-value='FastStochasticOscillator'>FastStochasticOscillator</li>
+    <li data-value='ForceIndex'>ForceIndex</li>
+    <li data-value='FullStochasticOscillator'>FullStochasticOscillator</li>
+    <li data-value='MarketFacilitationIndex'>MarketFacilitationIndex</li>
+    <li data-value='MassIndex'>MassIndex</li>
+    <li data-value='MedianPrice'>MedianPrice</li>
+    <li data-value='MoneyFlowIndex'>MoneyFlowIndex</li>
+    <li data-value='MovingAverageConvergenceDivergence'>MovingAverageConvergenceDivergence</li>
+    <li data-value='NegativeVolumeIndex'>NegativeVolumeIndex</li>
+    <li data-value='OnBalanceVolume'>OnBalanceVolume</li>
+    <li data-value='PercentagePriceOscillator'>PercentagePriceOscillator</li>
+    <li data-value='PercentageVolumeOscillator'>PercentageVolumeOscillator</li>
+    <li data-value='PositiveVolumeIndex'>PositiveVolumeIndex</li>
+    <li data-value='PriceVolumeTrend'>PriceVolumeTrend</li>
+    <li data-value='RateOfChangeAndMomentum'>RateOfChangeAndMomentum</li>
+    <li data-value='RelativeStrengthIndex'>RelativeStrengthIndex</li>
+    <li data-value='SlowStochasticOscillator'>SlowStochasticOscillator</li>
+    <li data-value='StandardDeviation'>StandardDeviation</li>
+    <li data-value='StochRSI'>StochRSI</li>
+    <li data-value='TRIX'>TRIX</li>
+    <li data-value='TypicalPrice'>TypicalPrice</li>
+    <li data-value='UltimateOscillator'>UltimateOscillator</li>
+    <li data-value='WeightedClose'>WeightedClose</li>
+    <li data-value='WilliamsPercentR'>WilliamsPercentR</li>
+            </ul>
+        </li>
+	</ul>
+</div>
 </template>
 <template class='financialChartRangeSelector'>
 	<div class='financialChartRangeSelector'>
@@ -71,7 +99,6 @@
 		<label class='rangeSelectorAll'><input type='radio' value='all'><span>all</span></label>
 	</div>
 </template>
-<template class='financialChartTrendLinePicker'>
 <span class="trendLinePickerLabel">Trendline</span>
 	<select class='financialChartTrendLinePicker'>
 		<option value='None'>None</option>
@@ -100,7 +127,6 @@
 		<option value='Column'>Column</option>
 	</select>
 </template>
-<template class='financialChartVolumeTypePicker'>
 <span class="volumeTypePickerLabel">Volume</span>
 	<select class='financialChartVolumeTypePicker'>
 		<option value='None'>None</option>
